--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="18sp"
-                    android:text="RIGHT →"
+                    android:text="→"
                     android:textColor="#000000"
                     android:background="#FFFFFF" />
             </LinearLayout>
