--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
                     android:textColor="#000000" />
 
                 <Switch
-                    android:id="@+id/switch2"
+                    android:id="@+id/switch_ForB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
